# telemetry-board

./: .gitignore  3  CMakeLists.txt  platformio.ini
mock/: config.h  print.cpp
mock/avr/: pgmspace.h
mock/firmware/: TcpServer.cpp  UdpServer.cpp  telemetry_board.cpp
mock/firmware/can/: can.cpp  tcpcan.h
mock/firmware/telemetry/: TcpServer.cpp  UdpServer.cpp
src/: assert_err.cpp  bridge.cpp  bridge.hpp  can_bus_count.hpp  can_defaults.h  main.cpp  print.cpp  print.h
src/canzero/: canzero.cpp  canzero.h  canzero_schedule_policy_hooks.cpp
src/canzero/telemetry/: becon.cpp  becon.h  connection.cpp  connection.h  datagrams.h  ip_host.h  packets.h  server.cpp  server.h  server_config.h  server_info.hpp  telemetry.cpp  telemetry.h
src/canzero_hooks/: canzero_schedule_policy.cpp
src/firmware/: LinkState.hpp  telemetry_board.cpp  telemetry_board.hpp
src/firmware/can/: can.cpp  can.hpp  flexcan.h
src/firmware/telemetry/: SocketAddr.cpp  SocketAddr.hpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp
src/telemetry/: becon.cpp  becon.h  connection.cpp  connection.h  datagrams.h  ip_host.h  packets.h  server.cpp  server.h  server_config.h  server_info.hpp  telemetry.cpp  telemetry.h
src/util/: build_time.cpp  build_time.hpp  cyclic_buffer.h  ema.h  interval.h  metrics.h  static_bag.h  timestamp.h  timestamped.h  timing.h
